add everything from phpci
https://gitlab.com/kfree/php/phpci

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,6 @@
 {
-  "require": {
-    "components/jquery": "1.12.4",
-    "twbs/bootstrap": "v3.3.6",
-    "phpunit/phpunit": "^5.5",
-    "katzgrau/klogger": "dev-master",
-    "mobiledetect/mobiledetectlib": "^2.8",
-    "twig/twig": "~2.0"
+  "require-dev": {
+    "phpunit/phpunit": "6.0.*"
   },
   "autoload": {
     "psr-4": {
