--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
-  "require-dev": {
-    "phpunit/phpunit": "6.0.*"
+  "require": {
+    "components/jquery": "1.12.4",
+    "twbs/bootstrap": "v3.3.6",
+    "mobiledetect/mobiledetectlib": "^2.8"
   },
   "autoload": {
     "psr-4": {
