--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
-    "components/jquery": "1.12.4",
-    "twbs/bootstrap": "v3.3.6",
+    "twbs/bootstrap": "^4.1",
+    "components/jquery": "^3.3",
     "mobiledetect/mobiledetectlib": "^2.8"
   },
   "autoload": {
