--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "twbs/bootstrap": "^4.1",
     "components/jquery": "^3.3",
-    "mobiledetect/mobiledetectlib": "^2.8"
+    "mobiledetect/mobiledetectlib": "^2.8",
+    "php-di/php-di": "^6.0"
   },
   "autoload": {
     "psr-4": {
