--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "relay/relay": "2.x@dev",
     "zendframework/zend-diactoros": "^1.7",
     "middlewares/fast-route": "^1.0",
-    "middlewares/request-handler": "^1.1"
+    "middlewares/request-handler": "^1.1",
+    "twig/twig": "^2.5"
   },
   "autoload": {
     "psr-4": {
