add name and description to composer json
fixes https://github.com/openroom/openroom/issues/3

fixes https://github.com/openroom/openroom/issues/4

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+  "name": "Openroom",
+  "description": "Openroom is a web application that manages your room reservations.",
   "license": "GPL-3.0-or-later",
   "require": {
     "twbs/bootstrap": "^4.1",
