use lower case for composer package name
Name "Openroom" does not match the best practice (e.g. lower-cased/with-dashes). We suggest using "openroom" instead. As such you will not be able to submit it to Packagist.

fixes https://github.com/openroom/openroom/issues/5

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Openroom",
+  "name": "openroom",
   "description": "Openroom is a web application that manages your room reservations.",
   "license": "GPL-3.0-or-later",
   "require": {
