--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "openroom",
+  "name": "Openroom",
   "description": "Openroom is a web application that manages your room reservations.",
   "license": "GPL-3.0-or-later",
   "require": {
